fixed stream issue

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,9 +1,8 @@
 <html>
 <body>
 	<div>
-		<textarea rows="4" cols="50" id="input">
-            print("Hello")
-        </textarea>
+		<textarea rows="4" style="width:100%" id="input">
+print("Hello")</textarea>
 	</div>
 	<div>
 		<input type="button" id="connectBtn" value="CONNECT"
